--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 
         <ul class="nav navbar-nav">
             <li><a href="/">Abstract</a></li>
-            <li><a href="/about">Mesh Heading</a></li>
+            <li><a href="/mh">Mesh Heading</a></li>
         </ul>
     </div>
 
