--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,10 @@
         </a>
 
         <ul class="nav navbar-nav">
-            <li><a href="/">Abstract</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/abs">Abstract</a></li>
             <li><a href="/mh">Mesh Heading</a></li>
+            <li><a href="/chart">Chart</a></li>
         </ul>
     </div>
 
