--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,19 @@
 <!-- views/partials/head.ejs -->
-<meta charset="UTF-8">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
 <title>NLM Project</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel='stylesheet' href='/css/stylesheet.css' />
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+      <script src="../../assets/js/html5shiv.js"></script>
+      <script src="../../assets/js/respond.min.js"></script>
+    <![endif]-->
 <style>
     body    { padding-top:20px; }
 </style>
-
+</head>
 
