--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
 
     <div class="navbar-header">
         <a class="navbar-brand" href="#">
-            <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+            <span class="glyphicon glyphicon glyphicon glyphicon-cloud"></span>
             NLM - MEDLINE/PubMed Data
         </a>
 
