--- a/views/pages/read_data.ejs
+++ b/views/pages/read_data.ejs
@@ -14,7 +14,7 @@
 		<table border="1">
 		   <% for (var i = 0; i < col_length+1; i++) { %>
 		   		<tr>
-				   <% for (var j = 0; j < col_length+1; j++) { %>
+				   <% for (var j = 0; j < 7; j++) { %>
 				   		<% if (i == 0 && j > 0) {%>
 				   			<td><b>Doc <%= j-1 %></b></td>
 				   		<%  } else if (j == 0 && i > 0){ %>
