--- a/views/pages/read_mh.ejs
+++ b/views/pages/read_mh.ejs
@@ -12,9 +12,9 @@
     <div class="container">
     	<div class="row">
 		<table border="1">
-		   <% for (var i = 0; i < col_length+1; i++) { %>
+		   <% for (var i = 0; i < 110; i++) { %>
 		   		<tr>
-				   <% for (var j = 0; j < 7; j++) { %>
+				   <% for (var j = 0; j < 5; j++) { %>
 				   		<% if (i == 0 && j > 0) {%>
 				   			<td><b>Doc <%= j-1 %></b></td>
 				   		<%  } else if (j == 0 && i > 0){ %>
