--- a/views/pages/chart.ejs
+++ b/views/pages/chart.ejs
@@ -62,6 +62,7 @@
     },
     yAxis: {
         min: 0,
+        max: 1,
         title: {
             text: 'Cosine Similarity'
         }
@@ -69,7 +70,7 @@
     tooltip: {
         headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
         pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+            '<td style="padding:0"><b>{point.y:.8f} mm</b></td></tr>',
         footerFormat: '</table>',
         shared: true,
         useHTML: true
