--- a/views/pages/read_data.ejs
+++ b/views/pages/read_data.ejs
@@ -9,29 +9,24 @@
 </header>
 
 <main>
-    <div class="container">
-    	<div class="row">
+    <div class="jumbotron">
+    	<h5>
 		<table border="1">
-		   <% for (var i = 0; i < col_length+1; i++) { %>
+			<tr>
+				<td><b>Docs</b></td>
+				<td><b>Doc 2</b></td>
+			</tr>
+		   <% for (var i = 1; i < col_length+1; i++) { %>
 		   		<tr>
-				   <% for (var j = 0; j < 7; j++) { %>
-				   		<% if (i == 0 && j > 0) {%>
-				   			<td><b>Doc <%= j-1 %></b></td>
-				   		<%  } else if (j == 0 && i > 0){ %>
 				   			<td><b>Doc <%= i-1 %></b></td>
-				   		<% } else { %>
 				   			<td>
-				   				<% if ((i - 1) >= 0 && (j-1) >= 0 ) { %>
-				   				<%= sims[i-1][j-1] %>
-				   				<% } %>
+				   				<%= sims[i-1] %>
 				   			</td>
-				   		<% } %>
-				   <% } %>
 			   </tr>
 		   <% } %>
 		</table>
-    </div>
-</div>
+		</h5>
+	</div>
 </main>
 
 <footer>
