--- a/views/pages/upload_doc.ejs
+++ b/views/pages/upload_doc.ejs
@@ -17,8 +17,10 @@
 		<form id="uploadForm" enctype="multipart/form-data" method="post">
 			<input type="file" name="userFile" /><br>
 			<input class="btn btn-sm btn-primary" type="submit" value="Upload File" name="submit">
-		</form></h5>
+		</form>
 		<br>
+		</h5>
+		
 		
     </div>
 </div>
