--- a/views/pages/read_mh.ejs
+++ b/views/pages/read_mh.ejs
@@ -16,7 +16,7 @@
 				<td><b>Docs</b></td>
 				<td><b>Doc 2</b></td>
 			</tr>
-		   <% for (var i = 1; i < col_length+1; i++) { %>
+		   <% for (var i = 1; i < 110; i++) { %>
 		   		<tr>
 				   			<td><b>Doc <%= i-1 %></b></td>
 				   			<td>
